--- a/comp1238.md
+++ b/comp1238.md
@@ -1,19 +1,19 @@
 ## Week 1 - History
-- Other writing systems
+- Other Writing Systems
 - Epic of Gilgamesh
 - Who is Johannes Gutenburg
 ## Week 2 - Bits and Bytes
-- Who devloped the telegraph system
-- Volatile and Non-volatile memory
-- printing and typewriters
+- Who Devloped the Telegraph System
+- Volatile and Non-Volatile Memory
+- Printing and Typewriters
 ## Week 3
 - Markup Languages
-- Special Characters & escaping
--UTF-8
+- Special Characters & Escaping
+- UTF-8
 ## Week 4
 -Keyboards
 - Touch Typing
-- TExt editors
+- Text Editors
 ## Week 5
-- Command Line interface
+- Command Line Interface
 - SSH
